add profile changes to allow compiling with Java 21