@@ -335,10 +335,45 @@
         </profile>
         <profile>
             <id>ffm-preview</id>
-            <activation><jdk>[19,22)</jdk></activation>
+            <activation><jdk>[21,22)</jdk></activation>
             <properties>
                 <ffm.args>--enable-preview --enable-native-access=ALL-UNNAMED</ffm.args>
+                <org.apache.datasketches.memory.vespa.version>6.0.0</org.apache.datasketches.memory.vespa.version>
+                <org.apache.datasketches.vespa.version>8.0.0</org.apache.datasketches.vespa.version>
             </properties>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <configuration>
+                                <release>21</release>
+                                <compilerArgs>
+                                <arg>--enable-preview</arg>
+                                <arg>-Xlint:all</arg>
+                                <arg>-Xlint:-this-escape</arg>
+                                <arg>-Xlint:-preview</arg>
+                                <arg>-Xlint:-serial</arg>
+                                <arg>-Xlint:-try</arg>
+                                <arg>-Xlint:-processing</arg>
+                                <arg>-Werror</arg>
+                                </compilerArgs>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <configuration>
+                                <release>21</release>
+                                <additionalJOptions>
+                                    <additionalJOption>--enable-preview</additionalJOption>
+                                </additionalJOptions>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
         </profile>
         <profile>
             <id>attach-sources</id>
@@ -454,24 +489,24 @@
                 </plugins>
             </build>
         </profile>
-	<profile>
-	    <id>java17VespaCompilerArgs</id>
-	    <activation>
-		<jdk>[1,21)</jdk>
-	    </activation>
-	    <properties>
-		<vespaCompilerArgs.xlint>-Xlint:all</vespaCompilerArgs.xlint>
-	    </properties>
-	</profile>
-	<profile>
-	    <id>java21VespaCompilerArgs</id>
-	    <activation>
-		<jdk>[21,25)</jdk>
-	    </activation>
-	    <properties>
-		<vespaCompilerArgs.xlint>-Xlint:all,-this-escape</vespaCompilerArgs.xlint>
-	    </properties>
-	</profile>
+        <profile>
+            <id>java17VespaCompilerArgs</id>
+            <activation>
+                <jdk>[1,21)</jdk>
+            </activation>
+            <properties>
+                <vespaCompilerArgs.xlint>-Xlint:all</vespaCompilerArgs.xlint>
+            </properties>
+        </profile>
+        <profile>
+            <id>java21VespaCompilerArgs</id>
+            <activation>
+                <jdk>[21,25)</jdk>
+            </activation>
+            <properties>
+                <vespaCompilerArgs.xlint>-Xlint:all,-this-escape</vespaCompilerArgs.xlint>
+            </properties>
+        </profile>
     </profiles>
 
     <dependencyManagement>
